// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChapterNavItem bottom renders correctly 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="commenting__content"
    >
      <button
        class="commenting--toc__button btn btn--light btn--small"
        type="button"
      >
        4. Chapter name
      </button>
    </div>
    <div
      class="commenting__actions btn-group"
      role="group"
    >
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="Move up"
        type="button"
      >
        <i
          aria-label="Move up"
          class="fa fa-chevron-up"
        />
      </button>
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="Move down"
        type="button"
      >
        <i
          aria-label="Move down"
          class="fa fa-chevron-down"
        />
      </button>
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="Delete"
        type="button"
      >
        <i
          aria-label="Delete"
          class="fas fa-trash-alt"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChapterNavItem middle renders correctly 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="commenting__content"
    >
      <button
        class="commenting--toc__button btn btn--light btn--small"
        type="button"
      >
        3. Chapter name
      </button>
    </div>
    <div
      class="commenting__actions btn-group"
      role="group"
    >
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="Move up"
        type="button"
      >
        <i
          aria-label="Move up"
          class="fa fa-chevron-up"
        />
      </button>
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="Move down"
        type="button"
      >
        <i
          aria-label="Move down"
          class="fa fa-chevron-down"
        />
      </button>
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="Delete"
        type="button"
      >
        <i
          aria-label="Delete"
          class="fas fa-trash-alt"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChapterNavItem top renders correctly 1`] = `
<DocumentFragment>
  <div
    class="row"
  >
    <div
      class="commenting__content"
    >
      <button
        class="commenting--toc__button btn btn--light btn--small active"
        type="button"
      >
        1. Chapter name
      </button>
    </div>
    <div
      class="commenting__actions btn-group"
      role="group"
    >
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="Move up"
        type="button"
      >
        <i
          aria-label="Move up"
          class="fa fa-chevron-up"
        />
      </button>
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="Move down"
        type="button"
      >
        <i
          aria-label="Move down"
          class="fa fa-chevron-down"
        />
      </button>
      <button
        class="btn btn--light btn--small"
        disabled=""
        title="Delete"
        type="button"
      >
        <i
          aria-label="Delete"
          class="fas fa-trash-alt"
        />
      </button>
    </div>
  </div>
</DocumentFragment>
`;
